--- a/app/src/main/res/drawable/dialog_btn_true_bg.xml
+++ b/app/src/main/res/drawable/dialog_btn_true_bg.xml
@@ -1,12 +1,14 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <gradient
-        android:angle="270"
-        android:endColor="@color/color_00EEFF"
-        android:startColor="@color/color_00A7FF" />
-    <corners
-        android:bottomLeftRadius="@dimen/dp_12"
-        android:bottomRightRadius="@dimen/dp_12"
-        android:topLeftRadius="@dimen/dp_12"
-        android:topRightRadius="@dimen/dp_12" />
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+    <item android:state_pressed="false">
+        <shape>
+            <gradient android:angle="270" android:endColor="@color/color_00EEFF" android:startColor="@color/color_00A7FF" />
+            <corners android:bottomLeftRadius="@dimen/dp_12" android:bottomRightRadius="@dimen/dp_12" android:topLeftRadius="@dimen/dp_12" android:topRightRadius="@dimen/dp_12" />
+        </shape>
+    </item>
+    <item android:state_pressed="true">
+        <shape>
+            <gradient android:angle="270" android:endColor="#9ff0f6" android:startColor="#63c0f1" />
+            <corners android:bottomLeftRadius="@dimen/dp_12" android:bottomRightRadius="@dimen/dp_12" android:topLeftRadius="@dimen/dp_12" android:topRightRadius="@dimen/dp_12" />
+        </shape>
+    </item>
+</selector>
