--- a/app/src/main/res/layout/presentation_content.xml
+++ b/app/src/main/res/layout/presentation_content.xml
@@ -38,14 +38,13 @@
             <!--80大 60中 40小 -->
             <TextView
                 android:id="@+id/horizontalTV"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginStart="@dimen/dp_30"
                 android:layout_marginTop="@dimen/dp_30"
                 android:layout_marginEnd="@dimen/dp_30"
                 android:layout_marginBottom="@dimen/dp_30"
                 android:gravity="center|left"
-                android:maxEms="6"
                 app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
                 app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
                 app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
