1、修改轮播图自定义控件放多张GIF是时的bug，以及内部控件ViewPager的布局错误 2、将配置请求更新放入MQTT的数据处理类中做处理 3、添加HomeFragment的触摸监听以及Dialog的触摸监听 4、修改待机统计时的重复统计导致Navigation报错的bug 5、添加待机页面

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -115,6 +115,9 @@
         <action
             android:id="@+id/action_homeFragment_to_cameraPreviewFragment"
             app:destination="@id/cameraPreviewFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_standbyFragment"
+            app:destination="@id/standbyFragment" />
     </fragment>
     <fragment
         android:id="@+id/callLiftFragment"
@@ -350,8 +353,8 @@
             android:id="@+id/action_selfCheckFragment_to_chargeFragment"
             app:destination="@id/chargeFragment" />
         <action
-            android:id="@+id/action_selfCheckFragment_to_updateConfigurationFragment"
-            app:destination="@id/updateConfigurationFragment" />
+            android:id="@+id/action_selfCheckFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
 
     </fragment>
     <fragment
@@ -499,11 +502,11 @@
             app:destination="@id/homeFragment" />
     </fragment>
     <fragment
-        android:id="@+id/updateConfigurationFragment"
-        android:name="com.sendi.deliveredrobot.view.fragment.UpdateConfigurationFragment"
-        android:label="UpdateConfigurationFragment" >
+        android:id="@+id/standbyFragment"
+        android:name="com.sendi.deliveredrobot.view.fragment.StandbyFragment"
+        android:label="StandbyFragment" >
         <action
-            android:id="@+id/action_updateConfigurationFragment_to_homeFragment"
+            android:id="@+id/action_standbyFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
     </fragment>
 
