1、当设置背景颜色传入为空的时候报错问题 2、添加广告配置、讲解配置、路线配置的报文接收 4、创建广告配置、讲解配置、路线配置、人脸特征的数据库 5、添加广告配置和门岗配置切换 6、在上次地图点的报文中添加修改时间戳 7、在讲解过程中播放打断问题的解决 8、将人脸识别&检测的os库初始化放入MyApplication的子线程，以免卡顿 9、添加常用的数据库查询方法 10、人脸识别方法的实现

--- a/app/src/main/res/layout/explanation_item.xml
+++ b/app/src/main/res/layout/explanation_item.xml
@@ -17,13 +17,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.sendi.deliveredrobot.view.widget.RoundImageView
+    <ImageView
         android:id="@+id/imageView"
         android:layout_width="287dp"
         android:layout_height="@dimen/dp_334"
         android:layout_marginTop="14dp"
-        android:src="@drawable/img"
-        android:scaleType="fitStart"
+        android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="@+id/view"
         app:layout_constraintStart_toStartOf="@+id/view"
         app:layout_constraintTop_toTopOf="@+id/view" />
