1、将副屏的音量和主屏幕的媒体音量绑定 2、分别处理副屏视频音量以及主屏幕语音、mp3音量 3、添加讲解过程中的帧动画 4、将副屏切换类型改为方法调用 5、将智能讲解数据获取与数据库绑定 6、处理只选择一个功能时的页面跳转

--- a/app/src/main/res/layout/fragment_guide.xml
+++ b/app/src/main/res/layout/fragment_guide.xml
@@ -34,6 +34,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:gravity="center"
+            android:visibility="gone"
             android:orientation="horizontal">
 
             <ImageView
@@ -49,6 +50,34 @@
                 android:layout_marginStart="@dimen/dp_11"
                 android:alpha="0.6"
                 android:text="@string/home" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/firstFragment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_68"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginStart="@dimen/dp_32"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" >
+            <ImageView
+                android:id="@+id/imageViewSetting"
+                android:layout_width="@dimen/dp_40"
+                android:layout_height="@dimen/dp_40"
+                android:src="@drawable/setting_svg"
+                />
+
+            <ImageView
+                android:id="@+id/regularImg"
+                android:layout_width="@dimen/dp_40"
+                android:layout_height="@dimen/dp_40"
+                android:layout_marginStart="@dimen/dp_32"
+                android:src="@drawable/timeoclick_svg"
+                app:layout_constraintBottom_toBottomOf="@+id/imageViewSetting"
+                app:layout_constraintStart_toEndOf="@+id/imageViewSetting"
+                app:layout_constraintTop_toTopOf="@+id/imageViewSetting" />
         </LinearLayout>
 
         <com.sendi.deliveredrobot.view.widget.MyGridView
