--- a/app/src/main/res/drawable/bg_button.xml
+++ b/app/src/main/res/drawable/bg_button.xml
@@ -1,12 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <!--    solid : 背景填充-->
-    <!--    corners ：圆角 (可单独设置圆角）-->
-    <!--    stroke ：边框（可设置边框宽度和颜色）-->
-    <!--    padding ：内边距-->
-    <!--    gradient ：渐变色（背景）-->
-    <!--    size ：大小-->
-    <corners android:radius="12dp"/>
-    <stroke android:width="4dp" android:color="@color/white"/>
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+<item android:state_pressed="false">
+    <shape>
+        <corners android:radius="12dp"/>
+        <stroke android:width="4dp" android:color="@color/white"/>
+    </shape>
+</item>
+<item android:state_pressed="true">
+    <shape>
+        <gradient android:angle="270" android:endColor="#9ff0f6" android:startColor="#63c0f1" />
+        <corners android:bottomLeftRadius="@dimen/dp_12" android:bottomRightRadius="@dimen/dp_12" android:topLeftRadius="@dimen/dp_12" android:topRightRadius="@dimen/dp_12" />
+    </shape>
+</item>
+</selector>
