--- a/app/src/main/res/layout/item_start_explanation.xml
+++ b/app/src/main/res/layout/item_start_explanation.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="horizontal">
 
     <RelativeLayout
         android:id="@+id/rlTimeline"
-        android:layout_width="@dimen/dp_32"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp_10"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -18,7 +18,7 @@
 
         <ImageView
             android:id="@+id/tvTopLine"
-            android:layout_width="4dp"
+            android:layout_width="wrap_content"
             android:layout_height="@dimen/dp_50"
             android:layout_centerHorizontal="true"
             android:background="#999"
@@ -47,8 +47,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="你好"
+        android:layout_gravity="bottom"
         android:textColor="@color/white"
-        android:textSize="24dp"
+        android:textSize="@dimen/sp_24"
+        android:layout_marginStart="@dimen/dp_5"
         app:layout_constraintBottom_toBottomOf="@+id/rlTimeline"
         app:layout_constraintStart_toEndOf="@+id/rlTimeline" />
 
@@ -62,4 +64,4 @@
         <!--            android:textColor="#999"-->
         <!--            android:textSize="12sp" />-->
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
