--- a/app/src/main/res/layout/fragment_start_explantion.xml
+++ b/app/src/main/res/layout/fragment_start_explantion.xml
@@ -12,6 +12,8 @@
         android:layout_height="match_parent"
         tools:context=".view.fragment.StartExplantionFragment">
 
+
+
         <ImageView
             android:id="@+id/startImg"
             android:layout_width="match_parent"
@@ -23,19 +25,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="ContentDescription" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/bg_img_halo"/>
 
-        <!--        <androidx.constraintlayout.widget.ConstraintLayout-->
-        <!--            android:id="@+id/con"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="match_parent"-->
-        <!--            android:background="@drawable/bg_img_halo"-->
-        <!--            tools:layout_editor_absoluteX="60dp"-->
-        <!--            tools:layout_editor_absoluteY="-16dp">-->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/con"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/bg"
             tools:layout_editor_absoluteX="60dp"
             tools:layout_editor_absoluteY="-16dp">
 
@@ -49,104 +47,113 @@
                 app:layout_constraintStart_toStartOf="@+id/con"
                 app:layout_constraintTop_toTopOf="@+id/con" />
 
-
-            <View
-                android:id="@+id/view26"
-                android:layout_width="@dimen/dp_1010"
-                android:layout_height="480dp"
-                android:background="@drawable/bg_explanation_acceptstation"
-                app:layout_constraintBottom_toBottomOf="@+id/con"
-                app:layout_constraintEnd_toEndOf="@+id/con"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/contentCL"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/pointList"
-                app:layout_constraintTop_toTopOf="@+id/con" />
-            <!--显示图片-->
-            <ImageView
-                android:id="@+id/pointImage"
-                android:layout_width="522dp"
-                android:layout_height="414dp"
-                android:layout_marginStart="@dimen/dp_32"
-                android:scaleType="fitXY"
-                android:src="@drawable/have_sound_svg"
-                app:layout_constraintBottom_toBottomOf="@+id/view26"
-                app:layout_constraintStart_toStartOf="@+id/view26"
-                app:layout_constraintTop_toTopOf="@+id/view26"
-                tools:src="@tools:sample/avatars" />
-            <!--显示文字-->
-            <TextView
-                android:id="@+id/pointTv"
-                android:layout_width="522dp"
-                android:layout_height="414dp"
-                android:layout_marginStart="@dimen/dp_32"
-                app:layout_constraintBottom_toBottomOf="@+id/view26"
-                app:layout_constraintStart_toStartOf="@+id/view26"
-                app:layout_constraintTop_toTopOf="@+id/view26" />
+                app:layout_constraintTop_toTopOf="parent">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/dp_52"
-                android:gravity="center"
-                android:orientation="horizontal"
-                app:layout_constraintBottom_toTopOf="@+id/view26"
-                app:layout_constraintEnd_toEndOf="@+id/view26"
-                app:layout_constraintStart_toEndOf="@+id/pointList">
-
+                <View
+                    android:id="@+id/view26"
+                    android:layout_width="@dimen/dp_1010"
+                    android:layout_height="480dp"
+                    android:layout_marginTop="@dimen/dp_52"
+                    android:background="@drawable/bg_explanation_acceptstation"
+                    app:layout_constraintBottom_toBottomOf="@+id/contentCL"
+                    app:layout_constraintEnd_toEndOf="@+id/contentCL"
+                    app:layout_constraintStart_toStartOf="@+id/contentCL"
+                    app:layout_constraintTop_toBottomOf="@+id/nameLin" />
+                <!--显示图片-->
+                <ImageView
+                    android:id="@+id/pointImage"
+                    android:layout_width="522dp"
+                    android:layout_height="414dp"
+                    android:layout_marginStart="@dimen/dp_32"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/have_sound_svg"
+                    app:layout_constraintBottom_toBottomOf="@+id/view26"
+                    app:layout_constraintStart_toStartOf="@+id/view26"
+                    app:layout_constraintTop_toTopOf="@+id/view26"
+                    tools:src="@tools:sample/avatars" />
+                <!--显示文字-->
                 <TextView
-                    android:id="@+id/tv"
+                    android:id="@+id/pointTv"
+                    android:layout_width="522dp"
+                    android:layout_height="414dp"
+                    android:layout_marginStart="@dimen/dp_32"
+                    app:layout_constraintBottom_toBottomOf="@+id/view26"
+                    app:layout_constraintStart_toStartOf="@+id/view26"
+                    app:layout_constraintTop_toTopOf="@+id/view26" />
+
+                <LinearLayout
+                    android:id="@+id/nameLin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="当前讲解:"
-                    android:textColor="@color/white"
-                    android:textSize="40sp"
-                    tools:ignore="HardcodedText" />
+                    android:layout_marginTop="@dimen/dp_60"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    app:layout_constraintEnd_toEndOf="@+id/view26"
+                    app:layout_constraintStart_toStartOf="@+id/view26"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <TextView
+                        android:id="@+id/tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="当前讲解:"
+                        android:textColor="@color/white"
+                        android:textSize="40sp"
+                        tools:ignore="HardcodedText" />
+
+                    <TextView
+                        android:id="@+id/nowExplanation"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="XXXXX"
+                        android:textColor="@color/white"
+                        android:textSize="40sp"
+                        tools:ignore="HardcodedText" />
+
+                </LinearLayout>
 
                 <TextView
-                    android:id="@+id/nowExplanation"
+                    android:id="@+id/pointName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="XXXXX"
+                    android:layout_marginStart="@dimen/dp_32"
+                    android:text="@string/Sendi"
                     android:textColor="@color/white"
-                    android:textSize="40sp"
+                    android:textSize="@dimen/sp_32"
+                    app:layout_constraintStart_toEndOf="@+id/pointImage"
+                    app:layout_constraintTop_toTopOf="@+id/pointImage" />
+
+                <View
+                    android:id="@+id/view2"
+                    android:layout_width="368dp"
+                    android:layout_height="@dimen/dp_1"
+                    android:layout_marginTop="@dimen/dp_20"
+                    android:alpha="0.7"
+                    android:background="@color/white"
+                    app:layout_constraintStart_toStartOf="@+id/pointName"
+                    app:layout_constraintTop_toBottomOf="@+id/pointName" />
+
+                <TextView
+                    android:id="@+id/acceptstationTv"
+                    android:layout_width="368dp"
+                    android:layout_height="@dimen/dp_325"
+                    android:layout_marginTop="@dimen/sp_24"
+                    android:alpha="0.6"
+                    android:text="紫荆关，是中国古代的军事防御工事，是一道高大、坚固而且连绵不断的长垣，用以限隔敌骑的行动。长城不是一道单纯孤立的城墙，而是以城墙为主体，同大量的城、障、亭、标相结合的防御体系，界八大奇"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/sp_24"
+                    app:layout_constraintStart_toStartOf="@+id/view2"
+                    app:layout_constraintTop_toBottomOf="@+id/view2"
                     tools:ignore="HardcodedText" />
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/pointName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dp_32"
-                android:text="@string/Sendi"
-                android:textColor="@color/white"
-                android:textSize="@dimen/sp_32"
-                app:layout_constraintStart_toEndOf="@+id/pointImage"
-                app:layout_constraintTop_toTopOf="@+id/pointImage" />
-
-            <View
-                android:id="@+id/view2"
-                android:layout_width="368dp"
-                android:layout_height="@dimen/dp_1"
-                android:layout_marginTop="@dimen/dp_20"
-                android:alpha="0.7"
-                android:background="@color/white"
-                app:layout_constraintStart_toStartOf="@+id/pointName"
-                app:layout_constraintTop_toBottomOf="@+id/pointName" />
-
-            <TextView
-                android:id="@+id/acceptstationTv"
-                android:layout_width="368dp"
-                android:layout_height="@dimen/dp_325"
-                android:layout_marginTop="@dimen/sp_24"
-                android:alpha="0.6"
-                android:text="紫荆关，是中国古代的军事防御工事，是一道高大、坚固而且连绵不断的长垣，用以限隔敌骑的行动。长城不是一道单纯孤立的城墙，而是以城墙为主体，同大量的城、障、亭、标相结合的防御体系，界八大奇"
-                android:textColor="@color/white"
-                android:textSize="@dimen/sp_24"
-                app:layout_constraintStart_toStartOf="@+id/view2"
-                app:layout_constraintTop_toBottomOf="@+id/view2"
-                tools:ignore="HardcodedText" />
-
+            </androidx.constraintlayout.widget.ConstraintLayout>
             <Button
                 android:id="@+id/finishBtn"
                 android:layout_width="@dimen/dp_204"
@@ -182,11 +189,12 @@
                 android:background="@drawable/dialog_btn_true_bg"
                 android:gravity="center"
                 android:text="下一个点"
+                android:layout_marginEnd="@dimen/dp_64"
+                android:layout_marginBottom="@dimen/dp_39"
                 android:textColor="@color/white"
                 android:textSize="32sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/view26"
-                app:layout_constraintTop_toBottomOf="@+id/view26" />
+                app:layout_constraintEnd_toEndOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <include
